# emp-swap

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  bench.sh  log  test-all.sh
cmake/: emp-swap-config.cmake
emp-swap/: ari_plain_eva.h  ari_privacy_free_eva.h  ari_privacy_free_gen.h  arithmetic_execution.h  arithmetic_plain_eva.h  arithmetic_zk.h  arithmetic_zk_eva.h  arithmetic_zk_gen.h  com.h  constant.h  emp-swap.cpp  emp-swap.h  garble_gate_privacy_free.h  hash_idx.h  number.h  number.hpp  numeric.h  real.h  real.hpp  semihonest.h  semihonest_eva.h  semihonest_gen.h  thread_buffer.h
test/: aes.cpp  bench.cpp  dlog.cpp  ecdsa.cpp  int.cpp  mem.cpp  neg.cpp  num.cpp  real.cpp  root.cpp  sha.cpp  simple.cpp  swap.cpp  sym.cpp
